# Cookbook

./: .gitignore  LICENSE  README.md
Euler Project/: P01_multiplesof3&5.py  P02_evenFibonacci.py  P06_sumSquareDifference.cpp
Java/: HelloWorld.java  HowOldAreYou.java
Python/: guessing_game.py
Web-CS/Hello World/: helloJS.js
WebDev/Hello World/: index.html
WebDev/MDN-Assessments/: README.md  Untitled new
WebDev/MDN-Assessments/bouncing-balls-assessment/: index.html  script.js  style.css
WebDev/MDN-Assessments/gallery-start-assessment/: main.js
WebDev/MDN-Assessments/guessing-game-assessment/: index.html  script.js
codewars/alternatingsplit/: alternatingsplit.cpp  alternatingsplit.h  main.cpp
codewars/isdorted-andhow/: issorted_andhow.h  issorted_andhow_tests.cpp  main.cpp
cube/: CMakeLists.txt  SimpleFragmentShader.glsl  SimpleVertexShader.glsl  cube.cpp
cube9/: CMakeLists.txt  SimpleFragmentShader.glsl  SimpleVertexShader.glsl  cubegrid.cpp  model.cpp  model.h
cubeTex/: CMakeLists.txt  SimpleFragmentShader.glsl  SimpleVertexShader.glsl  cubetex.cpp  texture.cpp
exercism/cpp/hello-world/: hello_world.h
exercism/cpp/leap/: leap.cpp  leap.h  leap_test.cpp  main.cpp
exercism/python/hello-world/: hello_world.py
exercism/python/leap/: leap.py
exercism/python/reverse-string/: myreverse_string_test.py  reverse_string.py  reverse_string_test.py
imp-dataStructures/BST/: bstree.cpp  bstree.h  main.cpp
imp-dataStructures/LL/SLL/: README.md  list.cpp  list.h  main  main.cpp
imp-dataStructures/inc/: error.h
imp-dataStructures/queue/: listqueue.cpp  listqueue.h  main  main.cpp
imp-dataStructures/stack/: README.md  arraystack.cpp  arraystack.h  liststack.cpp  liststack.h  main.cpp
interview-prep/: compress-string.cpp  multi-table.cpp  nth-factorial  nth-factorial.cpp  nth-fibonacci.cpp  phone-format.cpp  reverse-alphastr.cpp  reverse-string.cpp  sum-filenums.cpp
interview-prep/data/: contacts.txt  nums.txt  valid-contacts.txt
movingcube/: CMakeLists.txt  movingcube.cpp  objloader.cpp  shader.cpp  shader.h
movingmodel/: CMakeLists.txt  movingmodel.cpp  objloader.hpp
objects/: dumbraw.mtl  tube.mtl
objects/OrangeCardinalfish/: 13012_Orange_Lined_Cardinalfish_v1_l3.mtl
objects/mushroom/: mushroom.blend  mushroom.blend1
schecker/: makefile
schecker/inc/: checker.h  checkererror.h  cmdline.h  csvreporter.h  dictionary.h  parser.h  reporter.h  settings.h  smartptr.h  xmlreporter.h
schecker/src/: checker.cpp  cmdline.cpp  csvreporter.cpp  dictionary.cpp  main.cpp  parser.cpp  settings.cpp  xmlreporter.cpp
square/: CMakeLists.txt  SimpleFragmentShader.glsl  SimpleVertexShader.glsl  square.cpp
square2/: CMakeLists.txt  SimpleFragmentShader.glsl  SimpleVertexShader.glsl  square.cpp
triangle/: CMakeLists.txt  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  triangle.cpp
